# deepkeep_home_assignment

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  locustfile.py  pyproject.toml  rules.docx
.cursor/rules/: testing.mdc
.github/workflows/: ci.yml
docs/: day3_implementation_summary.md  day4_implementation_summary.md  day5_implementation_summary.md  high_level_plan.md  home_assignment.md
infra/: Dockerfile  docker-compose.yml
src/: __init__.py  main.py
src/api/: admin.py  chat.py
src/core/: config.py
src/db/: models.py  session.py
src/models/: schemas.py
src/repository/: __init__.py  user_repository.py
src/services/: moderation.py  openai_client.py
src/store/: __init__.py  user_store.py
tests/: conftest.py  test_admin_api.py  test_app.py  test_chat_api.py  test_integration.py  test_moderation.py  test_openai_client.py  test_user_store.py
