[tool.poetry]
name = "chat-gateway"
version = "0.1.0"
packages = [{ include = "src" }]

[project]
name = "deepkeep-home-assignment"
version = "0.1.0"
description = ""
authors = [
    {name = "Codex",email = "codex@openai.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.2"
black = "^25.1.0"
mypy = "^1.16.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pre-commit = "^4.2.0"

[tool.black]
line-length = 88

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"

